# stylish-tts

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  README.md  config_loader.py  losses.py  make-data-lists.py  meldataset.py  models.py  optimizers.py  pyproject.toml  requirements.txt  stages.py  text_utils.py  train.py  train_finetune_accelerate.py  train_first.py  train_second.py  utils.py
.github/workflows/: test.yaml
Configs/: config.template.yml  config.yml  config_ft.yml  config_libritts.yml  new.config.yml
Demo/: inference_libritts.py
Models/LibriTTS/: config.yml
Modules/: conformer.py  discriminators.py  hifigan.py  istftnet.py  ringformer.py  slmadv.py  stft.py  vocos.py
Utils/JDC/: model.py
Utils/PLBERT/: util.py
bertstyle/: fine-sbert.py  make-sentence-text.py
config/: config.template.yml  config.yml  model.16gb.yml  model.config.yml  model.yml  new.config.yml
hebrew/: check_wer.py  fetch_dataset.py  phoneme_dist.py  phonemize.py  plot_scores_hist.py  readme.txt  remove_bad_segments.py  resample.py  spilt_dataset.py
hebrew/adobe_enhance/: prepare_segs.py  reconstruct.py
hebrew/ljspeech/: prepare_dataset.py  readme.txt
lib/: pyproject.toml
lib/stylish_lib/: config_loader.py  text_utils.py
notebook/: reference-train-stylish.ipynb
stylish-tts/: batch_context.py  batch_manager.py  config_loader.py  ctc_primer.py  infer.py  loss_log.py  losses.py  meldataset.py  optimizers.py  stage_context.py  stage_train.py  stage_validate.py  stages.py  text_utils.py  train.py  train_context.py  train_finetune_accelerate.py  utils.py
stylish-tts/models/: common.py  conv_next.py  discriminators.py  duration_predictor.py  models.py  norm2d.py  pitch_energy_predictor.py  plbert.py  style_encoder.py  text_aligner.py  text_aligner_layers.py  text_encoder.py
stylish-tts/models/LibriTTS/: config.yml
stylish-tts/models/Modules/: discriminators.py  ringformer.py  vocos.py
stylish-tts/models/Utils/ASR/: models.py
stylish-tts/models/Utils/PLBERT/: util.py
stylish-tts/models/bertstyle/: fine-sbert.py  make-sentence-text.py
stylish-tts/models/decoder/: conformer.py  freev.py  harmonics.py  hifigan.py  istftnet.py  mel_decoder.py  ringformer.py  vocos.py
stylish-tts/models/decoder/ring_attention_pytorch/: __init__.py  ring_attention.py  ring_flash_attention.py  ring_flash_attention_cuda.py  tensor_typing.py  tree_attn_decoding.py  triton_flash_attn.py
stylish-tts/models/discriminators/: multi_resolution.py  multi_stft.py
train/: pyproject.toml
train/stylish_train/: batch_context.py  batch_manager.py  cli.py  config_loader.py  convert_to_onnx.py  loss_log.py  losses.py  meldataset.py  optimizers.py  stage.py  stage_context.py  stage_train.py  stage_validate.py  test_onnx.py  text_utils.py  train.py  train_context.py  utils.py
train/stylish_train/dataprep/: align_text.py
train/stylish_train/dataset/: align_text.py
train/stylish_train/models/: common.py  conv_next.py  decoder.py  duration_predictor.py  export_model.py  fine_style_encoder.py  models.py  onnx_models.py  pitch_energy_predictor.py  pitch_extractor.py  ringformer.py  stft.py  style_encoder.py  text_aligner.py  text_encoder.py
train/stylish_train/models/decoder/: conformer.py  freev.py  harmonics.py  istftnet.py  mel_decoder.py  ringformer.py  vocos.py
train/stylish_train/models/decoder/ring_attention_pytorch/: distributed.py  ring.py  zig_zag_attention.py
train/stylish_train/models/discriminators/: multi_period.py  multi_resolution.py  multi_stft.py  multi_subband.py
tts/: pyproject.toml
tts/stylish_tts/: speak.py
