[project]
name = "stylish-tts"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.3.0",
    "einops>=0.8.0",
    "einops-exts>=0.0.4",
    "librosa>=0.10.2.post1",
    "matplotlib>=3.10.0",
    "monotonic-align",
    "munch>=4.0.0",
    "nltk>=3.9.1",
    "nnaudio>=0.3.3",
    "numba~=0.61.0",
    "pandas>=2.2.3",
    "pydub>=0.25.1",
    "pyyaml>=6.0.2",
    "soundfile>=0.13.1",
    "tensorboard>=2.18.0",
    "tqdm>=4.66.5",
    "transformers>=4.48.1",
    "typing>=3.10.0.0",
    "typing-extensions>=4.12.2",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "triton-nightly",
    "ring_attention_pytorch",
    "pydantic>=2.10.6",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "triton-nightly"
url = "https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/Triton-Nightly/pypi/simple/"
explicit = true

[tool.uv.sources]
monotonic-align = { git = "https://github.com/resemble-ai/monotonic_align.git" }
torch = [
  { index = "pytorch-cu124", marker = "platform_system != 'Darwin'"},
]
torchvision = [
  { index = "pytorch-cu124", marker = "platform_system != 'Darwin'"},
]
triton-nightly = [
  { index = "triton-nightly" }
]
