[project]
name = "stylish-train"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "torch~=2.5.1",
    "torchaudio~=2.5.1",
    "numba>=0.60.0",
    "numpy>=2.0.2",
    "munch>=4.0.0",
    "einops>=0.8.0",
    "einops-exts>=0.0.4",
    "espeakng-loader>=0.2.4",
    "phonemizer-fork>=3.3.2",
    "transformers>=4.48.2",
    "matplotlib>=3.10.0",
    "scikit-learn>=1.6.1",
    "librosa>=0.10.2.post1",
    "nnaudio>=0.3.3",
    "accelerate>=1.3.0",
    "pydantic>=2.10.6",
    "tensorboard>=2.18.0",
    "xlstm>=2.0.2",
    "torchcrepe>=0.0.23",
    "sentence-transformers>=3.4.1",
    "tqdm>=4.67.1",
    "beartype>=0.20.0",
    "jaxtyping>=0.2.38",
    "wadler-lindig>=0.1.3",
    "k2>=1.24.4.dev20250208",
    "reformer-pytorch>=1.4.4",
    "onnx>=1.17.0",
    "stylish-lib",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
]

[tool.uv.sources]
k2 = { url = "https://huggingface.co/csukuangfj/k2/resolve/main/ubuntu-cuda/k2-1.24.4.dev20250208+cuda12.4.torch2.5.1-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl"}
stylish-lib = { path = "../lib/", editable = true }

# [[tool.uv.index]]
# url = "https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/Triton-Nightly/pypi/simple/"
# url = "https://k2-fsa.github.io/k2/cuda.html"

[tool.pyright]
venvPath = "."
venv = ".venv"
