[project]
name = "stylish-train"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "nltk>=3.9.1",
    "torch~=2.5.1",
    "torchaudio~=2.5.1",
    "numpy>=2.0.2",
    "munch>=4.0.0",
    "einops>=0.8.0",
    "einops-exts>=0.0.4",
    "transformers>=4.48.2",
    "matplotlib>=3.10.0",
    "librosa>=0.10.2.post1",
    "nnaudio>=0.3.3",
    "accelerate>=1.3.0",
    "pydantic>=2.10.6",
    "tensorboard>=2.18.0",
    "tqdm>=4.67.1",
    "k2>=1.24.4.dev20250208",
    "onnx>=1.17.0",
    "stylish-lib",
    "onnxruntime-gpu>=1.22.0",
    "nvidia-ml-py3>=7.352.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
]

[tool.uv.sources]
k2 = { url = "https://huggingface.co/csukuangfj/k2/resolve/main/ubuntu-cuda/k2-1.24.4.dev20250208+cuda12.4.torch2.5.1-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl"}
stylish-lib = { path = "../lib/", editable = true }

# [[tool.uv.index]]
# url = "https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/Triton-Nightly/pypi/simple/"
# url = "https://k2-fsa.github.io/k2/cuda.html"

[tool.pyright]
venvPath = "."
venv = ".venv"
